--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,7 @@ h1.project-tittle span {
     line-height: 28px;
 
 }
-/* work-inquiry css */
+/* work-inquiry */
 
 .work-inquary-area {
     width: 50%;
